--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "CarlosViniMSouza",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
